Refactoring of CoreCneRemedialActionsCreatorTest class
Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>